crates/weft-snapshots/tests/snapshots/html-data/corpus-search-results.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-search-results as html-data
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Search</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="search" aria-label="Search">
  <form data-weft-id="form" data-action="submit:search.run">
    <div data-weft-id="bar" class="weft-row" style="gap: var(--weft-space-sm)">
      <div data-weft-field>
        <label><span aria-hidden="true">Search</span><input data-weft-id="query" aria-label="Search" type="search" value="weft"></label>
      </div>
      <button data-weft-id="go" type="submit" data-variant="primary">Search</button>
    </div>
  </form>
  <ul data-weft-id="results">
    <li data-weft-id="result[0]">
      <h3 data-weft-id="result-title[0]">Weft specification</h3>
      <div data-weft-id="result-snippet[0]" data-weft-kind="text">An open format for describing UI.</div>
      <a data-weft-id="result-open[0]" role="link" tabindex="0" data-action="press:results.open">Open</a>
    </li>
    <li data-weft-id="result[1]">
      <h3 data-weft-id="result-title[1]">Weft benchmark</h3>
      <div data-weft-id="result-snippet[1]" data-weft-kind="text">Token counts and edit success.</div>
      <a data-weft-id="result-open[1]" role="link" tabindex="0" data-action="press:results.open">Open</a>
    </li>
  </ul>
</main>
</body>
</html>
