crates/weft-snapshots/tests/snapshots/html-data/corpus-settings.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-settings as html-data
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Settings</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-material-glass-tint: #ffffff47;
  --weft-material-glass-solid: #ffffff;
  --weft-material-glass-blur: 20px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
/* Weft base stylesheet: the least a screen needs to read as a form, not a theme. Every value is a
   token (`weft css-tokens`) with the default token's value as its fallback, so the sheet also
   works alone. Borders and muted text mix `currentColor`, so both appearances follow the page.
   Rules use only elements and attributes that the static page, the React and SolidJS components
   and the reference renderer share. */

main, form, section, dialog[open] {
  display: flex;
  flex-direction: column;
  gap: var(--weft-space-md, 16px);
}
dialog { padding: var(--weft-space-md, 16px); }
h1, h2, h3, h4, h5, h6 { margin: 0; }
img { max-width: 100%; }

/* A stack or grid with a material: a solid surface, and where the browser can blur what is behind
   it (Baseline since 2024-09-16, not yet everywhere) the tint over that blur. The properties are
   set on the element, from the material token's own. */
[data-weft-material] { background-color: var(--_weft-material-solid); }
@supports (backdrop-filter: blur(1px)) or (-webkit-backdrop-filter: blur(1px)) {
  [data-weft-material] {
    background-color: var(--_weft-material-tint);
    -webkit-backdrop-filter: blur(var(--_weft-material-blur));
    backdrop-filter: blur(var(--_weft-material-blur));
  }
}

/* A field: its caption above the control, then the error. */
label:has(> :is(input:not([type="checkbox"], [type="radio"]), select, textarea, [data-weft-stepper])) {
  display: flex;
  flex-direction: column;
  gap: var(--weft-space-xs, 4px);
}
label > span[aria-hidden="true"],
[role="radiogroup"] > span[aria-hidden="true"] { font-size: var(--weft-font-size-sm, 0.875rem); }
input:not([type="checkbox"], [type="radio"]), select, textarea {
  box-sizing: border-box;
  min-width: 0;
  padding: var(--weft-space-xs, 4px) var(--weft-space-sm, 8px);
  border: 1px solid color-mix(in srgb, currentColor 40%, transparent);
  border-radius: var(--weft-radius-sm, 4px);
  background: transparent;
  color: inherit;
  font: inherit;
}
[aria-invalid="true"] { border-color: var(--weft-color-action-danger, #dc2626); }
[data-weft-field] > :not(label) {
  color: var(--weft-color-action-danger, #dc2626);
  font-size: var(--weft-font-size-sm, 0.875rem);
}
label:has(> :disabled), button:disabled { opacity: 0.6; }

/* A checkbox, switch or radio: the control, then its caption, in a row. */
label:has(> :is(input[type="checkbox"], input[type="radio"])) {
  display: flex;
  align-items: center;
  gap: var(--weft-space-sm, 8px);
}
input { accent-color: var(--weft-color-action-primary, #2563eb); }
input[type="checkbox"], input[type="radio"] { margin: 0; }
input[role="switch"] {
  appearance: none;
  position: relative;
  flex: none;
  width: 2.25em;
  height: 1.25em;
  border-radius: var(--weft-radius-pill, 999px);
  background: color-mix(in srgb, currentColor 30%, transparent);
}
input[role="switch"]::before {
  content: "";
  position: absolute;
  top: 2px;
  left: 2px;
  width: calc(1.25em - 4px);
  height: calc(1.25em - 4px);
  border-radius: 50%;
  background: var(--weft-color-white, #ffffff);
}
input[role="switch"]:checked { background: var(--weft-color-action-primary, #2563eb); }
input[role="switch"]:checked::before { left: calc(1em + 2px); }
[role="radiogroup"] {
  display: flex;
  flex-direction: column;
  gap: var(--weft-space-xs, 4px);
}

/* A slider and a colour picker are not boxes of text: no frame, and the colour keeps a swatch's
   size. A stepper is its input between two buttons, and a segmented control a joined row. */
input[type="range"], input[type="color"] { padding: 0; border: 0; }
input[type="color"] { width: 3em; height: 2em; }
[data-weft-stepper] {
  display: flex;
  align-items: center;
  gap: var(--weft-space-xs, 4px);
}
[data-weft-stepper] input {
  width: 4em;
  text-align: center;
  appearance: textfield;
}
[data-weft-stepper] input::-webkit-inner-spin-button,
[data-weft-stepper] input::-webkit-outer-spin-button { appearance: none; }
[data-weft-segmented] {
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  gap: 0;
}
[data-weft-segmented] > span[aria-hidden="true"] { flex: 0 0 100%; margin-bottom: var(--weft-space-xs, 4px); }
[data-weft-segmented] > label {
  position: relative;
  padding: var(--weft-space-xs, 4px) var(--weft-space-md, 16px);
  border: 1px solid color-mix(in srgb, currentColor 40%, transparent);
  margin-left: -1px;
  gap: 0;
}
[data-weft-segmented] > label:first-of-type { margin-left: 0; border-radius: var(--weft-radius-sm, 4px) 0 0 var(--weft-radius-sm, 4px); }
[data-weft-segmented] > label:last-of-type { border-radius: 0 var(--weft-radius-sm, 4px) var(--weft-radius-sm, 4px) 0; }
[data-weft-segmented] > label:has(:checked) {
  border-color: var(--weft-color-action-primary, #2563eb);
  background: var(--weft-color-action-primary, #2563eb);
  color: var(--weft-color-white, #ffffff);
}
/* The radio stays in the tree and takes the keyboard; the segment is what is drawn. */
[data-weft-segmented] input { position: absolute; inset: 0; margin: 0; opacity: 0; cursor: pointer; }

a, [role="link"] {
  color: var(--weft-color-action-primary, #2563eb);
  text-decoration: underline;
  cursor: pointer;
}

button {
  padding: var(--weft-space-xs, 4px) var(--weft-space-md, 16px);
  border: 1px solid color-mix(in srgb, currentColor 40%, transparent);
  border-radius: var(--weft-radius-sm, 4px);
  background: transparent;
  color: inherit;
  font: inherit;
  cursor: pointer;
}
button:disabled { cursor: not-allowed; }
/* Not stretched across the column; a button in a row keeps the row's own alignment. */
main > button, form > button, section > button { align-self: flex-start; }
button[data-variant="primary"] {
  border-color: var(--weft-color-action-primary, #2563eb);
  background: var(--weft-color-action-primary, #2563eb);
  color: var(--weft-color-white, #ffffff);
}
button[data-variant="danger"] {
  border-color: var(--weft-color-action-danger, #dc2626);
  background: var(--weft-color-action-danger, #dc2626);
  color: var(--weft-color-white, #ffffff);
}

/* Buttons and links in a footer or an actions slot sit in one row. */
[data-weft-slot="footer"], [data-weft-slot="actions"] {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: var(--weft-space-sm, 8px);
}

[role="tablist"] {
  display: flex;
  gap: var(--weft-space-xs, 4px);
  border-bottom: 1px solid color-mix(in srgb, currentColor 40%, transparent);
}
[role="tab"] {
  border-width: 0 0 2px;
  border-color: transparent;
  border-radius: 0;
}
[role="tab"][aria-selected="true"] { border-color: currentColor; }
[role="tabpanel"] { padding-block: var(--weft-space-md, 16px); }
[role="menu"] {
  display: flex;
  flex-direction: column;
  gap: var(--weft-space-xs, 4px);
}

[data-tone] { --tone: currentColor; }
[data-tone="danger"] { --tone: var(--weft-color-action-danger, #dc2626); }
[data-tone="info"] { --tone: var(--weft-color-action-primary, #2563eb); }
[data-tone="success"] { --tone: var(--weft-color-success, #16a34a); }
[data-tone="warning"] { --tone: var(--weft-color-warning, #d97706); }
[data-tone="muted"] { --tone: color-mix(in srgb, currentColor 60%, transparent); }
[data-tone] { color: var(--tone); }
[role="alert"] {
  padding: var(--weft-space-sm, 8px) var(--weft-space-md, 16px);
  border-left: 4px solid var(--tone, currentColor);
  border-radius: var(--weft-radius-sm, 4px);
  background: color-mix(in srgb, var(--tone, currentColor) 12%, transparent);
}

table { border-collapse: collapse; }
th, td {
  padding: var(--weft-space-xs, 4px) var(--weft-space-sm, 8px);
  border-bottom: 1px solid color-mix(in srgb, currentColor 25%, transparent);
  text-align: start;
}
/* A bulleted list is a plain column of rows; an ordered one keeps its numbers. */
ul {
  display: flex;
  flex-direction: column;
  gap: var(--weft-space-xs, 4px);
  margin: 0;
  padding: 0;
  list-style: none;
}
ol { margin: 0; }
ul > li {
  display: flex;
  align-items: center;
  gap: var(--weft-space-sm, 8px);
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; align-items: center; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="settings" aria-label="Settings">
  <h1 data-weft-id="title">Settings</h1>
  <section data-weft-id="notifications" aria-label="Notifications">
    <h2 data-weft-id="notifications-title">Notifications</h2>
    <label><input data-weft-id="email-alerts" aria-label="Email alerts" type="checkbox" role="switch" checked><span aria-hidden="true">Email alerts</span></label><label><input data-weft-id="push-alerts" aria-label="Push notifications" type="checkbox" role="switch"><span aria-hidden="true">Push notifications</span></label>
  </section>
  <section data-weft-id="appearance" aria-label="Appearance">
    <h2 data-weft-id="appearance-title">Appearance</h2>
    <label><span aria-hidden="true">Language</span><select data-weft-id="language" aria-label="Language">
        <option data-weft-id="lang-en" selected value="en">English</option>
        <option data-weft-id="lang-de" value="de">Deutsch</option>
        <option data-weft-id="lang-fr" value="fr">Français</option>
      </select></label><label><input data-weft-id="dark-mode" aria-label="Dark mode" type="checkbox" role="switch"><span aria-hidden="true">Dark mode</span></label>
  </section>
  <button data-weft-id="save" type="button" data-variant="primary" disabled data-action="press:settings.save">Save changes</button>
</main>
</body>
</html>
