crates/weft-snapshots/tests/snapshots/html-data/corpus-signup.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-signup as html-data
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Create account</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="signup" aria-label="Create account">
  <form data-weft-id="form" data-state="idle" data-action="submit:auth.signup">
    <h1 data-weft-id="title">Create your account</h1>
    <div data-weft-id="fields" class="weft-stack" style="gap: var(--weft-space-md)">
      <div data-weft-field>
        <label><span aria-hidden="true">Full name</span><input data-weft-id="name" aria-label="Full name" type="text" required value="Ada Lovelace"></label>
      </div>
      <div data-weft-field>
        <label><span aria-hidden="true">Email</span><input data-weft-id="email" aria-label="Email" type="email" required value="ada@example.com"></label>
      </div>
      <div data-weft-field>
        <label><span aria-hidden="true">Password</span><input data-weft-id="password" aria-label="Password" type="password" required value=""></label>
      </div>
      <div data-weft-field>
        <label><span aria-hidden="true">Confirm password</span><input data-weft-id="confirm" aria-label="Confirm password" type="password" required value=""></label>
      </div>
      <label><input data-weft-id="terms" aria-label="I accept the terms of service" type="checkbox"><span aria-hidden="true">I accept the terms of service</span></label>
    </div>
    <button data-weft-id="submit" type="submit" data-variant="primary" disabled>Create account</button>
    <footer data-weft-slot="footer">
      <a data-weft-id="signin" role="link" tabindex="0" data-action="press:nav.signin">Already have an account? Sign in</a>
    </footer>
  </form>
</main>
</body>
</html>
